<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/layout_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/linearMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp"
                card_view:cardBackgroundColor="@color/myWindowBackground"
                card_view:cardElevation="0dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:foreground="?android:attr/selectableItemBackground" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_margin="10dp" >


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/myTextPrimaryColor"
                        android:textSize="14sp"
                        android:paddingStart="3dp"
                        android:paddingEnd="3dp"
                        android:text="ADDRESS DETAILS" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editAddress"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_address"
                            android:singleLine="true"
                            android:maxLength="40" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_locality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editLocality"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_locality"
                            android:singleLine="true"
                            android:maxLength="40" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editCity"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_city"
                            android:singleLine="true"
                            android:maxLength="40" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editState"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_state"
                            android:singleLine="true"
                            android:maxLength="40" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editCountry"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_country"
                            android:singleLine="true"
                            android:maxLength="40" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" >

                        <EditText
                            android:id="@+id/editPincode"
                            style="@style/CustomEditTextStyle"
                            android:hint="@string/hint_pincode"
                            android:singleLine="true"
                            android:maxLength="6"
                            android:digits="1234567890"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>